--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-home"></i>
+					<img src="img/cetegory_icon/agro.png">
 					<h2>TFsons Agro</h2>
 						<p class="service_p">Argo farming-Production, Distribution & sell.</p>
 					<a href="agro.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -236,7 +236,7 @@
 			
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-tree"></i>
+					<img src="img/cetegory_icon/wood.png">
 					<h2>TFsons Wood</h2>
 						<p class="service_p">Buy tree, Make it wood, And sell it.</p>
 					<a href="our_business/wood/wood_posting.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -246,7 +246,7 @@
 			
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-plane"></i>
+					<img src="img/cetegory_icon/exportimport.png">
 					<h2>TFsons Export & Import</h2>
 						<p class="service_p">Its import & export own product, And work as a third party for import & Export</p>
 					<a href="our_business/exportimport/exportimport_posting.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -266,7 +266,7 @@
 			
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-desktop"></i>
+					<img src="img/cetegory_icon/technology.png">
 					<h2>TFsons Technology</h2>
 						<p class="service_p">Wholesale, Distribution & Retail.</p>
 					<a href="technology.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -276,7 +276,7 @@
 			
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-medkit"></i>
+					<img src="img/cetegory_icon/doctor.png">
 					<h2>Doctor's Care</h2>
 						<p class="service_p">Its medical coaching center</p>
 					<a href="our_business/doctor/doctor_posting.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -286,7 +286,7 @@
 			
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-shopping-bag"></i>
+					<img src="img/cetegory_icon/supershop.png">
 					<h2>TFsons Supershop</h2>
 						<p class="service_p"></p>
 					<a href="our_business/supershop/supershop_posting.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -295,7 +295,7 @@
 				
 				<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
-					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-shopping-bag"></i>
+					<img src="img/cetegory_icon/inutravel.png">
 					<h2>INU Travel Guide</h2>
 						<p class="service_p"></p>
 					<a href="our_business/inutravel/inutravel_posting.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
@@ -341,7 +341,7 @@
 			
 			<a href="agro.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-home"></i>
+					<img src="img/cetegory_icon/agro.png">
 					<h2>TFsons Argo farm</h2>
 				</div>
 			               </div></a>
@@ -349,7 +349,7 @@
 			
 			<a href="our_business/wood/wood_posting.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-tree"></i>
+					<img src="img/cetegory_icon/wood.png">
 					<h2>TFsons Wood</h2>
 				</div>
 		               </div></a>
@@ -357,7 +357,7 @@
 			
 			<a href="our_business/exportimport/exportimport_posting.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-plane"></i>
+					<img src="img/cetegory_icon/exportimport.png">
 					<h2>TFsons Export & Import</h2>
 				</div>
 		               </div></a>
@@ -373,7 +373,7 @@
 			
 			<a href="technology.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-desktop"></i>
+					<img src="img/cetegory_icon/technology.png">
 					<h2>TFsons Technology</h2>
 				</div>
 	               </div></a>
@@ -381,7 +381,7 @@
 			
 			<a href="our_business/doctor/doctor_posting.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-medkit"></i>
+					<img src="img/cetegory_icon/doctor.png">
 					<h2>Doctor's Care</h2>
 				</div>
 	               </div></a>
@@ -389,14 +389,14 @@
 			
 			<a href="our_business/supershop/supershop_posting.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-shopping-bag"></i>
+					<img src="img/cetegory_icon/supershop.png">
 					<h2>TFsons Supershop</h2>
 				</div>
                </div></a>
 				
 				<a href="our_business/inutravel/inutravel_posting.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
-					<i class="fa fa-shopping-bag"></i>
+					<img src="img/cetegory_icon/inutravel.png">
 					<h2>INU Travel Guide</h2>
 				</div>
                </div></a>
@@ -615,4 +615,4 @@
   AOS.init();
 </script>
 </body>
-</html>>>>>>
+</html>>>>>>>
