--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 		<div class="new_service_container">
 			
-			<div data-aos="fade-up" data-aos-duration="1000"><h1>Our Business</h1>
+			<div data-aos="fade-up"><h1>Our Business</h1>
 			<div class="devider"></div></div>
 			
 			<div class="service_div_container">
@@ -299,6 +299,15 @@
 					<h2>INU Travel Guide</h2>
 						<p class="service_p"></p>
 					<a href="our_business/inutravel/inutravel_posting.html"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
+				</div>
+			</div>
+
+			<div class="new_sevice_div" data-aos="flip-down" >
+				<div class="service_inner">
+					<img src="img/cetegory_icon/poruya.png">
+					<h2>Poruya (Education Platform)</h2>
+						<p class="service_p">This is a online Learning Platform.</p>
+					<a href="https://www.youtube.com/channel/UCDr9LnnfpTTa9GF1bjkFoWQ"><div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div></a>
 				</div>
 			</div>
 		
@@ -398,6 +407,13 @@
 				<div class="phone_service_inner">
 					<img src="img/cetegory_icon/inutravel.png">
 					<h2>INU Travel Guide</h2>
+				</div>
+               </div></a>
+
+			   <a href="https://www.youtube.com/channel/UCDr9LnnfpTTa9GF1bjkFoWQ"><div class="phone_sevice_div" data-aos="flip-down" >
+				<div class="phone_service_inner">
+					<img src="img/cetegory_icon/poruya.png">
+					<h2>Poruya (Education Platform)</h2>
 				</div>
                </div></a>
 		
