--- a/about.html
+++ b/about.html
@@ -410,7 +410,7 @@ function googleTranslateElementInit() {
 		
 		
 		
-		<div data-aos="zoom-out-up" align="center" class="about_home">
+		<!---<div data-aos="zoom-out-up" align="center" class="about_home">
 				<h1 align="center"> Other Members </h1>
 				<div class="devider"></div>
 			</div><br>
@@ -424,7 +424,7 @@ function googleTranslateElementInit() {
 				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/5.png">
 			</div>		
 		</div>
-		
+	-->
 			
 			
 		
