--- a/our_business/agro/agriculture_products/biofloc_products/biofloc_products_posting.html
+++ b/our_business/agro/agriculture_products/biofloc_products/biofloc_products_posting.html
@@ -163,38 +163,38 @@
 	
 	
 	
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/1.jpg"><h3>			</h3></a></div>	
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/2.jpg"><h3>			</h3></a></div>	
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/3.jpg"><h3>			</h3></a></div>	
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/4.jpg"><h3>			</h3></a></div>	
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/5.jpg"><h3>			</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/6.jpg"><h3>			</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/7.jpg"><h3>			</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/8.jpg"><h3>			</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/9.jpg"><h3>			</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/11.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/12.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/13.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/14.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/15.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/16.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/17.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/18.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/19.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/21.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/22.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/23.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/24.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/25.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/26.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/27.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/30.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/31.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/32.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/33.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/34.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/35.jpg"><h3>		</h3></a></div>
-	<div data-aos="zoom-out-up"><a href=""><img alt="" src="../../../argo/agriculture_products/biofloc_products/36.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="1.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="2.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="3.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="4.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="5.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="6.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="7.jpg"> <h3>    </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="8.jpg"> <h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="9.jpg"> <h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="11.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="12.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="13.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="14.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="15.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="16.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="17.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="18.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="19.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="21.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="22.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="23.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="24.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="25.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="26.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="27.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="30.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="31.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="32.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="33.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="34.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="35.jpg"><h3>   </h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="36.jpg"><h3>   </h3></a></div>
 
 
 
