--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 			<a href="agro.html"><div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
 					<img src="img/cetegory_icon/agro.png">
-					<h2>TFsons Argo farm</h2>
+					<h2>TFsons Argo</h2>
 				</div>
 			               </div></a>
 			
